# python-project-lvl1

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  make_lint.yml
brain_games/: cli.py  games_engine.py
brain_games/games/: calc.py  even.py  games_engine.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
